[project]
name = "fasteners"
version = "0.19"
description = "A python package that provides useful locks"
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8" }
requires-python = ">=3.6"
keywords = ["lock", "thread", "process", "fasteners"]
license = { text = "Apache-2.0" }
authors = [{ name = "Joshua Harlow" }]
maintainers = [{ name = "Paulius Šarka" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/harlowja/fasteners"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests_eventlet"]
