[metadata]
name = fasteners
version = 0.17.2
url = https://github.com/harlowja/fasteners

author = Joshua Harlow
maintainer = Paulius Šarka

description = A python package that provides useful locks
long_description = file:README.md
long_description_content_type = text/markdown; charset-UTF-8
keywords = lock thread process fasteners

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

license = ASL 2.0
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude = tests
